# Coach-Outreach-Dashboard

./: .env  .env.example  README.md  docker-compose.yml  nixpacks.toml  package.json  setup.sh
backend/: Dockerfile  auth.py  coolify_service.py  create_admin_user.py  init_db.py  instagram_bot.py  message_templates.py  models.py  pyproject.toml  schemas.py
backend/app/: api.py  crud.py  database.py  main.py  schemas.py
backend/instance/: coach_outreach.db
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx
frontend/src/components/: Analytics.tsx  Campaigns.tsx  Dashboard.tsx  Deploy.tsx  InstagramAccounts.tsx  Login.tsx  Overview.tsx  Prospects.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
