[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
requests = "^2.32.4"
pandas = "^2.3.1"
openai = "^1.95.1"
python-dotenv = "^1.1.1"
flask = "^3.1.1"
flask-cors = "^6.0.1"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
gunicorn = "^23.0.0"
apify-client = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
