[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
requests = "^2.32.4"
pandas = "^2.3.1"
openai = "^1.95.1"
python-dotenv = "^1.1.1"
gunicorn = "^23.0.0"
apify-client = "^1.12.0"
uvicorn = "^0.22.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^1.4.36"
bcrypt = "^4.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
